syntax = "proto3";

option go_package = "gen/userpb";

package user_service;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";

service UserService {
  rpc CreateUser(RequestCreateUser) returns (ResponseCreateUser);
  rpc PatchUser(RequestPatchUser) returns (ResponsePatchUser);
  rpc DeleteUser(RequestDeleteUser) returns (ResponseDeleteUser);
  rpc ListUsers(RequestListUsers) returns (ResponseListUsers);
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string nickname = 4;
  string email = 5;
  string country = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;

  message Patch {
    google.protobuf.StringValue first_name = 1;
    google.protobuf.StringValue last_name = 2;
    google.protobuf.StringValue nickname = 3;
    google.protobuf.StringValue password = 4;
    google.protobuf.StringValue email = 5;
    google.protobuf.StringValue country = 6;
  }
}

// CreateUser
message RequestCreateUser {
  string first_name = 1 [(validator.field) = {string_not_empty: true}];
  string last_name = 2 [(validator.field) = {string_not_empty: true}];
  string nickname = 3 [(validator.field) = {string_not_empty: true}];
  string password = 4 [(validator.field) = {string_not_empty: true}];
  string email = 5 [(validator.field) = {string_not_empty: true}];
  string country = 6 [(validator.field) = {string_not_empty: true}];
}
message ResponseCreateUser {
  string id = 1;
}

// PatchUser
message RequestPatchUser {
  string id = 1 [(validator.field) = {string_not_empty: true}];
  User.Patch patch = 2 [(validator.field) = {msg_exists: true}];
}
message ResponsePatchUser {}

// DeleteUser
message RequestDeleteUser {
  string id = 1 [(validator.field) = {string_not_empty: true}];
}
message ResponseDeleteUser {}

// ListUsers
message RequestListUsers {
  string pagination_token = 1;
  uint32 page_size = 2;
  string country = 3;
}
message ResponseListUsers {
  repeated User users = 1;
}

/* EVENTS */
message Event {
  message UserCreated {
    User user = 1;
  }

  message UserPatched {
    User.Patch patch = 1;
  }

  message UserDeleted {
    string id = 1;
  }
}